Bug 203354 - kcmshell4 crashing
Summary: kcmshell4 crashing
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-10 21:08 UTC by roideuniverse
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
crash report of kcmshell4 crashing (3.38 KB, application/octet-stream)
2009-08-10 21:08 UTC, roideuniverse
Details

Note You need to log in before you can comment on or make changes to this bug.
Description roideuniverse 2009-08-10 21:08:20 UTC
Created attachment 36053 [details]
crash report of kcmshell4 crashing

i started my mission control 5
then gabble manually by 
GABBLE_PERSIST=1 ./telepathy-gabble

then i ran this command 
kcmshell4 kcm_telepathy_accounts

kcmshell started, and when i clicked on create account it crashed.
The backtrace is added as an attachemnt.

How I am able to reproduce it,
I installed mission control and telepathy-gabble with the prefix=/home/roide/kde
 so that it installs only for me, and not for other users, and this crash it happening again and again.

Thinking that something is wrong with paths, i reinstalled them with super user privileges for all the users. now the crash is not happening. 
I hv tried both the conditions again and again, with the same result.

#####################
the debug out put i get after running kchshell4 kcm_telepathy_accounts is
 
[roide@localhost libexec]$ kcmshell4 kcm_telepathy_accounts
Telepathy-Qt4 (version 0.1.9.1) WARNING: Error parsing config file for connection manager "gabble" - introspecting
Telepathy-Qt4 (version 0.1.9.1) WARNING: Properties.GetAll(ConnectionManager) failed: "org.freedesktop.DBus.Error.UnknownMethod": "Method "GetAll" with signature "s" on interface "org.freedesktop.DBus.Properties" doesn't exist
"
QDBusPendingReply: type Tp::ParamSpecList is not registered with QtDBus
KCrash: Application 'kcmshell4' crashing...
sock_file=/home/roide/.kde4/socket-localhost.localdomain/kdeinit4__0

[1]+  Stopped                 kcmshell4 kcm_telepathy_accounts
Comment 1 George Goldberg 2009-08-10 21:19:24 UTC
Pasting backtrace inline:
-------------------------

Application: KDE Control Module (kcmshell4), signal: Aborted
[KCrash Handler]
#6  0x00428416 in __kernel_vsyscall ()
#7  0x00a59460 in raise () from /lib/libc.so.6
#8  0x00a5ae28 in abort () from /lib/libc.so.6
#9  0x05faf0c5 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0x05faf1b1 in qFatal () from /usr/lib/libQtCore.so.4
#11 0x003ea7c8 in ?? () from /usr/lib/libQtDBus.so.4
#12 0x003eb1b2 in QDBusPendingReplyData::setMetaTypes () from /usr/lib/libQtDBus.so.4
#13 0x019cc02f in QDBusPendingReply<QList<Tp::ParamSpec>, void, void, void, void, void, void, void>::calculateMetaTypes (this=0xbf9a5944) at /usr/include/QtDBus/qdbuspendingreply.h:193
#14 QDBusPendingReply<QList<Tp::ParamSpec>, void, void, void, void, void, void, void>::assign () at /usr/include/QtDBus/qdbuspendingreply.h:199
#15 QDBusPendingReply<QList<Tp::ParamSpec>, void, void, void, void, void, void, void>::operator= () at /usr/include/QtDBus/qdbuspendingreply.h:141
#16 QDBusPendingReply () at /usr/include/QtDBus/qdbuspendingreply.h:135
#17 Tp::Client::ConnectionManagerInterface::GetParameters (this=0x9a9ace8, protocol=@0x9a91194) at ../TelepathyQt4/_gen/cli-connection-manager.h:156
#18 0x019c9529 in Tp::ConnectionManager::Private::introspectParameters (this=0x9a9a540) at connection-manager.cpp:607
#19 0x019c99ae in Tp::ConnectionManager::gotProtocols (this=0x9a9a948, watcher=0x9a99b40) at connection-manager.cpp:655
#20 0x019cb4b4 in Tp::ConnectionManager::qt_metacall (this=0x9a9a948, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbf9a5b0c) at ../TelepathyQt4/_gen/connection-manager.moc.hpp:77
#21 0x060c16b8 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#22 0x060c2342 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#23 0x003e9b43 in QDBusPendingCallWatcher::finished () from /usr/lib/libQtDBus.so.4
#24 0x003e9bb7 in QDBusPendingCallWatcher::qt_metacall () from /usr/lib/libQtDBus.so.4
#25 0x060baddb in QMetaCallEvent::placeMetaCall () from /usr/lib/libQtCore.so.4
#26 0x060bc8b0 in QObject::event () from /usr/lib/libQtCore.so.4
#27 0x0301d75c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#28 0x03025a6e in QApplication::notify () from /usr/lib/libQtGui.so.4
#29 0x00dce3ed in KApplication::notify (this=0xbf9a6420, receiver=0x9a99b40, event=0x9a9ae68) at /home/roide/kde/src/trunk/KDE/kdelibs/kdeui/kernel/kapplication.cpp:302
#30 0x060abf5b in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#31 0x060acbb5 in QCoreApplicationPrivate::sendPostedEvents () from /usr/lib/libQtCore.so.4
#32 0x060acdad in QCoreApplication::sendPostedEvents () from /usr/lib/libQtCore.so.4
#33 0x060d7b9f in ?? () from /usr/lib/libQtCore.so.4
#34 0x00fc3258 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#35 0x00fc6903 in ?? () from /lib/libglib-2.0.so.0
#36 0x00fc6ac1 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#37 0x060d77e8 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#38 0x030bd9c5 in ?? () from /usr/lib/libQtGui.so.4
#39 0x060aa58a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#40 0x060aa9d2 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#41 0x0350d9f3 in QDialog::exec () from /usr/lib/libQtGui.so.4
#42 0x005fa55d in kdemain (_argc=2, _argv=0xbf9a6674) at /home/roide/kde/src/trunk/KDE/kdebase/runtime/kcmshell/main.cpp:267
#43 0x08048652 in main (argc=) at /home/roide/kde/build/trunk/KDE/kdebase/runtime/kcmshell/kcmshell4_dummy.cpp:3
Comment 2 George Goldberg 2009-08-10 21:29:47 UTC
SVN commit 1009753 by gberg:

Don't forget to register the Telepathy DBus types before we use tpqt4.

BUG: 203354

 M  +4 -0      kcm-telepathy-accounts.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1009753