Don't forget to register the Telepathy DBus types before we use tpqt4.

BUG: 203354

svn path=/trunk/playground/network/telepathy-accounts-kcm/; revision=1009753